--- a/CPPN.ipynb
+++ b/CPPN.ipynb
@@ -9,19 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
@@ -36,7 +28,8 @@
     "from skimage.color import hsv2rgb\n",
     "import time\n",
     "from PIL import Image\n",
-    "import math\n"
+    "import math\n",
+    "import imageio"
    ]
   },
   {
@@ -126,23 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def generatorNetworkTwo(variance, inputShape = (4, ), channelSize = 3, networkDepth = 4, activation = 'tanh', units = 32):\n",
-    "    \n",
-    "        init = initializers.VarianceScaling(scale = variance)\n",
     "        \n",
     "        xInput = Input(shape = inputShape, name = \"xInput\")\n",
+    "        init = initializers.VarianceScaling(scale = variance)\n",
+    "        \n",
     "        x = Dense(units, kernel_initializer = init, activation = activation, name = \"Dense1\")(xInput)\n",
     "        \n",
     "        for i in range (networkDepth):\n",
     "            x = Dense(units, kernel_initializer = init, activation = activation, name = \"Dense\" + str(i + 2))(x)\n",
     "\n",
-    "        outputLayer = Dense(channelSize, activation = 'tanh', name = \"OutputSigmoid\")(x)\n",
+    "        outputLayer = Dense(channelSize, activation = 'sigmoid', name = \"OutputSigmoid\")(x)\n",
     "        \n",
     "        model = Model(inputs = [xInput], outputs = outputLayer)\n",
     "        \n",
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -237,15 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def createImage(model, x, xDim, y, yDim, r):\n",
+    "def createImage(model, x, xDim, y, yDim, r, latentSpace = None):\n",
     "    \n",
-    "    latentSpace = np.random.normal(0, 1, 1)\n",
+    "    if latentSpace == None:\n",
+    "        latentSpace = np.random.normal(0, 1, 1)\n",
+    "    \n",
     "    Z = np.repeat(latentSpace, x.shape[0]).reshape(-1, x.shape[0])\n",
     "    X = np.concatenate([x, y, r, Z.T], axis = 1)\n",
     "        \n",
@@ -434,6 +429,120 @@
    "source": [
     "plotImages(images)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Generate Nearby Images by Varying Across Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Model One"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/4 [00:00<?, ?it/s]\u001b[A\n",
+      "100%|██████████| 4/4 [01:57<00:00, 29.28s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "images = []\n",
+    "numberOfImages = 4\n",
+    "model = generatorNetwork(networkDepth = 2, activation = 'relu', units = 32)\n",
+    "latentSpace = np.random.normal(0, 1, 1)\n",
+    "\n",
+    "for i in tqdm(range(numberOfImages)):\n",
+    "    \n",
+    "    x, y, r = createGrid(xDim, yDim, 1.0)\n",
+    "    image = createImage(model, x, xDim, y, yDim, r, latentSpace)\n",
+    "    latentSpace = latentSpace + 0.1\n",
+    "    image = image.squeeze()\n",
+    "    images.append(image)\n",
+    "\n",
+    "    \n",
+    "    saveImage(image, './Images/GIF/relu-2layers-32units-M1', i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Model Two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
+      "100%|██████████| 10/10 [05:58<00:00, 35.80s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "images = []\n",
+    "numberOfImages = 10\n",
+    "x, y, r = createGrid(xDim, yDim, 1.0)\n",
+    "modelTwo = generatorNetworkTwo(variance = (10 * (np.cos(r).any())), networkDepth = 4, units = 32)\n",
+    "latentSpace = np.random.normal(0, 1, 1)\n",
+    "\n",
+    "for i in tqdm(range(numberOfImages)):\n",
+    "    \n",
+    "    \n",
+    "    image = createImage(modelTwo, x, xDim, y, yDim, r, latentSpace)\n",
+    "    latentSpace = latentSpace + 0.02\n",
+    "    image = image.squeeze()\n",
+    "    images.append(image)\n",
+    "\n",
+    "    \n",
+    "    saveImage(image, './Images/GIF/tanh-4layers-32units-tanhOutput-M2-variance10cosr', i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
